# quesync

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  README.md  build.bat  client.cpp  database-dump.sql  newClient.cpp  runClient.bat  server.cpp
client/: .gitignore  binding.gyp  cert.pem  client.cpp  hello.cc  index.js  package-lock.json  package.json  socket-manager.cpp  voice-chat.cpp
client/backend/: .gitignore  CMakeLists.txt  binding.gyp  client.cc  hello.cc  index.js  package-lock.json  package.json  quesync-backend.cc  socket-manager.cc  voice-chat.cc  voice-chat.cpp
client/backend/include/: client.hpp  socket-manager.hpp  voice-chat.hpp
client/backend/src/: backend.cpp  client.cc  client.cpp  client.h  client.hpp  communicator.cpp  communicator.h  event-handler.cpp  event-handler.h  event-worker.cpp  event-worker.h  event_names.h  executer.cc  executer.cpp  executer.h  executer.hpp  quesync-backend.cc  quesync-backend.cpp  socket-error.hpp  socket-manager.cc  socket-manager.cpp  socket-manager.h  socket-manager.hpp  structs.hpp  voice-chat.cc  voice-chat.cpp  voice-chat.h  voice-chat.hpp  voice-input.cpp  voice-input.h  voice-output.cpp  voice-output.h
client/backend/src/core/: auth.cpp  auth.h  channels.cpp  channels.h  client.cpp  client.h  communicator.cpp  communicator.h  event_handler.cpp  event_handler.h  files.cpp  files.h  messages.cpp  messages.h  module.h  socket_manager.cpp  socket_manager.h  user.cpp  user.h  users.cpp  users.h  voice.cpp  voice.h
client/backend/src/core/voice/: input.cpp  input.h  manager.cpp  manager.h  output.cpp  output.h  sound_device.h
client/backend/src/include/: client.hpp  socket-manager.hpp  structs.hpp  voice-chat.hpp
client/backend/src/wrapper/: auth.h  channels.h  client.cpp  client.h  event_names.h  executer.cpp  executer.h  files.h  messages.h  module.h  user.h  users.h  voice.h
client/include/: socket-error.hpp  socket-manager.hpp  voice-chat.hpp
client/public/: electron.js  index.html  manifest.json
client/src/: App.js  app.jsx  app.scss  call_window.jsx  call_window.scss  error_middleware.js  event-handler.js  event_handler.js  index.js  index.scss  layout.js  layout.jsx  layout.scss  logger.js  server_ip_window.jsx  server_ip_window.scss  start_page.css  start_page.js  start_page.jsx  start_page.scss  store.js  updater.js
client/src/actions/: authActions.js  badgesActions.js  channelsActions.js  clientActions.js  filesActions.js  itemsActions.js  messagesActions.js  tabsActions.js  uiActions.js  userActions.js  usersActions.js  voiceActions.js
client/src/components/: attachment.jsx  attachment.scss  attachment_zone.jsx  attachment_zone.scss  background_particles.jsx  badge.jsx  call_details.jsx  call_details.scss  channel.jsx  channel.scss  connection_status.jsx  connection_status.scss  drawer_item.jsx  (+37 more)
db/: quesync-db.db
include/: bigint.h
include/zxcvbn/: _frequency_lists.cpp  common.hpp  optional.hpp  scoring.cpp  util.cpp  zxcvbn.hpp
lib/: opus.lib
resources/: icon.icns  icon.psd
rsa/: public_key.cpp  public_key.h  random.cpp  random.h  sizes.h
server/: CMakeLists.txt  build.bat  build.sh  channel_management.cpp  channel_management.h  channel_manager.cpp  channel_manager.h  database-dump.sql  dump.sh  errors.h  event_management.cpp  event_management.h  event_manager.cpp  event_manager.h  file_manager.cpp  file_manager.h  file_session.cpp  file_session.h  main.cpp  main.py  manager.h  message_manager.cpp  message_manager.h  packet.h  quesync.cpp  quesync.h  quesync_exception.h  serialized_object.h  server.cpp  server.h  server.pem  session.cpp  session.h  session_manager.cpp  session_manager.h  testing.py  user.h  user_management.cpp  user_management.h  user_manager.cpp  (+5 more)
server/db/: quesync-db.db
server/packets/: error_packet.h  login_packet.cpp  login_packet.h  packet.h  packet_types.h  response_packet.h
server/python/: main.py  testing.py
server/src/: channel_manager.cpp  channel_manager.h  database_dump.h  event_manager.cpp  event_manager.h  file_manager.cpp  file_manager.h  file_session.cpp  file_session.h  main.cpp  manager.h  message_manager.cpp  message_manager.h  server.cpp  server.h  session.cpp  session.h  session_manager.cpp  session_manager.h  user_manager.cpp  user_manager.h  voice_manager.cpp  voice_manager.h
server/testing/: client.py
shared/: call.h  call_details.h  channel.h  error.h  errors.h  event.h  event_type.h  event_types.h  exception.h  file.h  file_chunk.h  friend_request.h  header.h  memory_file.h  message.h  packet.h  packet_type.h  profile.h  quesync_exception.h  response_packet.h  serialized_object.h  serialized_packet.h  user.h  utils.cpp  utils.h  validation.cpp  validation.h  voice_header.h  voice_state.h
shared/events/: call_ended_event.h  file_transmission_progress_event.h  friend_request_event.h  friendship_status_event.h  incoming_call_event.h  message_event.h  ping_event.h  server_disconnect_event.h  voice_activity_event.h  voice_state_event.h
shared/packets/: call_request_packet.h  download_file_packet.h  error_packet.h  event_packet.h  file_chunk_ack_packet.h  file_chunk_packet.h  file_transmission_stop_packet.h  friend_request_packet.h  friendship_status_packet.h  get_channel_calls_packet.h  get_channel_messages.h  get_channel_messages_packet.h  get_file_info_packet.h  get_private_channel_packet.h  join_call_request_packet.h  leave_call_packet.h  login_packet.h  logout_packet.h  packet.h  packet_types.h  participant_voice_packet.h  ping_packet.h  profile_packet.h  profile_request_packet.h  register_packet.h  response_packet.h  search_packet.h  send_message_packet.h  serialized_packet.h  session_auth_packet.h  set_profile_photo_packet.h  set_voice_state_packet.h  shutdown_file_session_packet.h  upload_file_packet.h  voice_otp_packet.h  voice_packet.h  voice_participant_packet.h
shared/utils/: client.cpp  client.h  encryption.h  event_generator.cpp  event_generator.h  files.cpp  files.h  memory.h  packet_generator.cpp  packet_generator.h  parser.cpp  parser.h  rand.cpp  rand.h  server.cpp  server.h  validation.cpp  validation.h
(+28 files in other folders)
